--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -69,6 +69,9 @@ $nav-strikethrough-color--about: $color-accent-yellow-100
 $nav-strikethrough-color--projects: $color-accent-orange-100
 $nav-strikethrough-color--workflow: $color-primary-100
 $nav-strikethrough-color--contact: $color-accent-cyan-100
+$nav-background-color--mobile: $color-neutral-100
+$nav-font-color--mobile: $color-neutral-20
+$nav-menu-color: $color-neutral-100
 
 // Sub-header colors
 $sub-header-fallback-color: $color-white
