--- a/components/nav/nav.html
+++ b/components/nav/nav.html
@@ -40,7 +40,7 @@
   </div>
   <ul class="nav__content">
     <div class="nav__background"></div>
-    {% for link in component.links %}
+    {%- for link in component.links -%}
     <a
       href="{{ link.url }}"
       class="nav__link nav__link--{{ link.name.lower() }}"
@@ -49,6 +49,6 @@
         {{ link.name }}
       </li>
     </a>
-    {% endfor %}
+    {%- endfor -%}
   </ul>
 </nav>
