--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -4,7 +4,7 @@
   data-target="nav__link--projects"
 >
   <h1 class="projects__header">Projects</h1>
-  {% for project in component.projects %}
+  {%- for project in component.projects -%}
   <div class="project">
     <img
       src="{{ project.image.file.url }}"
@@ -18,5 +18,5 @@
       </p>
     </div>
   </div>
-  {% endfor %}
+  {%- endfor -%}
 </section>
