--- a/components/why-us/why-us.html
+++ b/components/why-us/why-us.html
@@ -11,9 +11,9 @@
       <div class="modal__x">&times;</div>
       <h2 class="modal__header">{{ component.modal_title }}</h2>
       <ul class="modal__list">
-        {% for question in component.modal_questions %}
+        {%- for question in component.modal_questions -%}
         <li class="modal__question">{{ question }}</li>
-        {% endfor %}
+        {%- endfor -%}
       </ul>
     </div>
   </div>
