Fix projects responsiveness with new images

--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -50,6 +50,11 @@
 .project__image
   margin: 0 $spacing-60
   max-width: 50%
+  +media(tablet-landscape)
+    max-width: 40%
+  +media(tablet-portrait)
+    max-width: 90%
+    margin: 0
 
 .project__info--1--pause
   position: fixed
