Fix contact form styles

--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -15,24 +15,28 @@
     {%- for form in component.forms -%}
     <form action="{{ form.action }}" class="{{ form.css_class }}">
       {%- for field in form.fields -%} {%- if field.type == 'textarea' -%}
-      <label for="{{ field.name }}" class="form__field__label">{{
-        field.label
-      }}</label>
-      <textarea
-        name="{{ field.name }}"
-        class="form__field__control"
-        placeholder="{{ field.placeholder }}"
-      ></textarea>
+      <div class="form__group">
+        <label for="{{ field.name }}" class="form__field__label">{{
+          field.label
+        }}</label>
+        <textarea
+          name="{{ field.name }}"
+          class="form__field__control"
+          placeholder="{{ field.placeholder }}"
+        ></textarea>
+      </div>
       {%- endif -%} {%- if field.type.input -%}
-      <label for="{{ field.name }}" class="form__field__label">{{
-        field.label
-      }}</label>
-      <input
-        type="{{ field.type.input }}"
-        class="form__field__control"
-        name="{{ field.name }}"
-        placeholder="{{ field.placeholder }}"
-      />
+      <div class="form__group">
+        <label for="{{ field.name }}" class="form__field__label">{{
+          field.label
+        }}</label>
+        <input
+          type="{{ field.type.input }}"
+          class="form__field__control"
+          name="{{ field.name }}"
+          placeholder="{{ field.placeholder }}"
+        />
+      </div>
       {%- endif -%} {%- endfor -%}
       <div class="form__group">
         <button type="submit" class="form__button">Submit</button>
