--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -95,6 +95,10 @@
   z-index: 2
   +media(tablet-portrait)
     display: block
+    height: 60%
+  +media(mobile)
+    transform: scale(0.8)
+    height: 80%
 
 .nav__bar
   width: 2rem
