Begin lazy loader setup

--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -8,7 +8,7 @@
   <div class="project">
     <div class="project__frame">
       <img
-        src="{{ project.image.file.url }}"
+        data-src="{{ project.image.file.url }}"
         alt="{{ project.image.description }}"
         class="project__image"
       />
