--- a/components/about/about.html
+++ b/components/about/about.html
@@ -6,7 +6,7 @@
   <div class="{{ person.css_class }}">
     <div class="profile__frame">
       <img
-        src="{{ person.image.file.url }}"
+        data-src="{{ person.image.file.url }}"
         alt="{{ person.image.description }}"
         class="profile__image"
       />
