Delete old _base.sass file

--- a/global/sass-global-sources/base.sass
+++ b/global/sass-global-sources/base.sass
@@ -1,4 +1,10 @@
 @import ../sass-config/colors
 
+*
+  box-sizing: border-box
+
+html
+  scroll-behavior: smooth
+
 body
   background: $color-neutral-100
