--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -62,12 +62,14 @@
   text-decoration: none
   cursor: pointer
   transition: transform 0.3s
+  +font-weight-light
 
 .contact__topic:hover
   transform: translateX(0.5rem)
 
 .contact__topic--active
   transform: translateX(1rem)
+  +font-weight-bold
 
 .contact__topic--active:hover
   transform: translateX(1rem)
@@ -138,9 +140,5 @@ textarea.form__field__control
   color: $contact-button-hover-font-color
   cursor: pointer
 
-.contact__form--1--reveal
-  display: flex
-.contact__form--2--reveal
-  display: flex
-.contact__form--3--reveal
+.contact__form--reveal
   display: flex
