--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -5,8 +5,8 @@
 >
   <div class="left">
     <img
-      src="/static/images/workflow.jpg"
-      alt="Computer Head"
+      src="{{ component.hero_image.file.url }}"
+      alt="{{ component.hero_image.description }}"
       class="workflow__image"
     />
   </div>
