--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -89,6 +89,8 @@ $about-gradient-font-end-color: $color-accent-yellow-100
 $project-about-font-color: $color-neutral-20
 $project-gradient-font-start-color: $color-accent-orange-110
 $project-gradient-font-end-color: $color-accent-orange-100
+$project-frame-gradient-start-color: $color-accent-orange-110
+$project-frame-gradient-end-color: $color-accent-orange-100
 
 // Hero colors
 $hero-background-color: $color-neutral-100
