Change frame color of about images

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -36,7 +36,7 @@
 .profile__frame
   overflow: hidden
   transform-origin: bottom
-  background: $profile-block-color
+  background: linear-gradient(to top right, $about-profile-gradient-start-color, $about-profile-gradient-end-color)
   margin: 0 $spacing-60
   max-height: 80vh
   max-width: 30%
