--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -50,11 +50,7 @@
 .project__frame
   margin: 0 $spacing-60
   max-width: 50%
-  background: linear-gradient(
-    to top right, 
-    $project-frame-gradient-start-color, 
-    $project-frame-gradient-end-color
-  )
+  background: linear-gradient(to top right, $project-frame-gradient-start-color, $project-frame-gradient-end-color)
   +media(tablet-landscape)
     max-width: 40%
   +media(tablet-portrait)
