--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -84,6 +84,8 @@ $profile-block-color: $color-neutral-20
 $profile-position-font-color: $color-white
 $about-gradient-font-start-color: $color-accent-yellow-110
 $about-gradient-font-end-color: $color-accent-yellow-100
+$about-profile-gradient-start-color: $color-accent-yellow-110
+$about-profile-gradient-end-color: $color-accent-yellow-100
 
 // Projects colors
 $project-about-font-color: $color-neutral-20
