--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -15,9 +15,9 @@
     </div>
     <div class="{{ project.info_css_class }}">
       <h2 class="project__name">{{ project.name }}</h2>
-      <p class="project__about">
-        {{ project.about }}
-      </p>
+      <div class="project__about">
+        {{ project.about|markdown|safe }}
+      </div>
     </div>
   </div>
   {%- endfor -%}
