--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -47,7 +47,7 @@
   margin-bottom: $spacing-40
   margin-top: $spacing-50
 
-.workflow__paragraph
+.workflow__paragraph p
   color: $workflow-paragraph-color
   +font-secondary
   +font-weight-regular
