--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -89,6 +89,7 @@ $about-profile-gradient-end-color: $color-accent-yellow-100
 
 // Projects colors
 $project-about-font-color: $color-neutral-20
+$project-about-font-color--hover: white
 $project-gradient-font-start-color: $color-accent-orange-110
 $project-gradient-font-end-color: $color-accent-orange-100
 $project-frame-gradient-start-color: $color-accent-orange-110
