Setup mask block reveal on about images

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -10,6 +10,7 @@
         alt="{{ person.image.description }}"
         class="profile__image"
       />
+      <div class="profile__block"></div>
     </div>
     <div class="profile__info">
       <h2 class="profile__name">{{ person.name }}</h2>
