--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -36,13 +36,12 @@
 
 .profile__frame
   overflow: hidden
-  transform-origin: bottom
-  background: linear-gradient(to top right, $about-profile-gradient-start-color, $about-profile-gradient-end-color)
   margin: 0 $spacing-60
   max-height: 80vh
   max-width: 30%
   display: flex
   align-items: center
+  position: relative
   +media(tablet-landscape)
     margin: 0 $spacing-40
     max-width: 50vw
@@ -54,8 +53,21 @@
 .profile__image
   width: 100%
   height: 100%
-  transform-origin: bottom
   object-fit: cover
+
+.profile__block
+  transform-origin: top
+  background: linear-gradient(to top right, $about-profile-gradient-start-color, $about-profile-gradient-end-color)
+  height: 100%
+  width: 100%
+  z-index: 2
+  position: absolute
+  top: 0
+  left: 0
+  transition: transform 0.5s
+
+.profile__block--reveal
+  transform: translateY(-100%)
 
 .profile__info
   display: flex
