--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -42,6 +42,7 @@
   display: flex
   align-items: center
   position: relative
+  transform-origin: bottom
   +media(tablet-landscape)
     margin: 0 $spacing-40
     max-width: 50vw
@@ -64,7 +65,7 @@
   position: absolute
   top: 0
   left: 0
-  transition: transform 0.5s
+  transition: transform 0.3s
 
 .profile__block--reveal
   transform: translateY(-100%)
