--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -156,4 +156,5 @@ $why-us-button-color: $color-neutral-20
 $why-us-button-color--dark: $color-neutral-100
 $modal-background-color: $color-neutral-20
 $modal-header-color: $color-neutral-100
+$modal-x-color: $color-neutral-100
 $modal-question-color: $color-neutral-80
