--- a/components/why-us/why-us.html
+++ b/components/why-us/why-us.html
@@ -1,19 +1,24 @@
 <section class="why-us">
-  <h1 class="why-us__header">
-    {{ component.header }}
-  </h1>
-  <h4 class="why-us__tagline">{{ component.tagline }}</h4>
-  <button class="why-us__button">
-    {{ component.button }}
-  </button>
+  <div class="why-us__content">
+    <h1 class="why-us__header">
+      {{ component.header }}
+    </h1>
+    <h4 class="why-us__tagline">{{ component.tagline }}</h4>
+    <button class="why-us__button">
+      {{ component.button }}
+    </button>
+  </div>
   <div class="modal">
     <div class="modal__content">
       <div class="modal__x">&times;</div>
       <h2 class="modal__header">{{ component.modal_title }}</h2>
-      <h4 class="modal__info">{{ component.modal_copy }}</h4>
+      <div class="modal__info">
+        {{ component.modal_copy | markdown | safe }}
+      </div>
       <ul class="modal__list">
         {% for question in component.modal_questions %}
         <li class="modal__question">{{ question.question }}</li>
+        <li class="modal__answer">{{ question.answer | markdown | safe }}</li>
         {% endfor %}
       </ul>
     </div>
