--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -27,9 +27,20 @@
   max-width: 70vmin
   margin-top: -1.5vw
   margin-top: -1.5vmin
+  animation: glitch 3s infinite
+  position: absolute
 
   .cls-3 // TODO(Angus) Sort this SVG OUT
     stroke: none
+
+.hero__logo--red
+  animation: glitch 3s infinite -0.1s
+  .cls-3
+    fill: rgba(red, 0.5)
+.hero__logo--blue
+  animation: glitch 3s infinite -0.2s
+  .cls-3
+    fill: rgba(cyan, 0.5)
 
 .hero__heading
   +font-secondary
@@ -52,3 +63,16 @@
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   padding: $spacing-20
+
+// Move this to separate file
+@keyframes glitch
+  0%, 100%
+    transform: translate(0, 0)
+  49%
+    transform: translate(0, 0)
+  50%
+    transform: translate(-1.3%, 1.8%)
+  51%
+    transform: translate(2.3%, -2.8%)
+  52%
+    transform: translate(0, 0)
