Move modal x to outside of modal

--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -98,8 +98,8 @@
 
 .modal__x
   position: absolute
-  font-size: $font-size-40
-  color: $modal-x-color
+  font-size: $font-size-60
+  color: white
   cursor: pointer
   top: 0.5rem
   right: 1rem
