--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -154,7 +154,8 @@ $why-us-header-color: $color-neutral-20
 $why-us-tagline-color: $color-neutral-40
 $why-us-button-color: $color-neutral-20
 $why-us-button-color--dark: $color-neutral-100
-$modal-background-color: $color-neutral-20
-$modal-header-color: $color-neutral-100
-$modal-x-color: $color-neutral-100
-$modal-question-color: $color-neutral-80
+$modal-background-color: $color-neutral-80
+$modal-header-color: $color-neutral-20
+$modal-x-color: $color-neutral-20
+$modal-question-color: $color-neutral-20
+$modal-link-color: $color-neutral-40
