--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -63,7 +63,7 @@
   top: 0
   left: 0
   z-index: 1
-  width: 100vw
+  width: 100%
   background: rgba(0, 0, 0, 0.25)
   display: flex
   align-items: center
