--- a/components/why-us/why-us.html
+++ b/components/why-us/why-us.html
@@ -17,10 +17,14 @@
       </div>
       <ul class="modal__list">
         {% for question in component.modal_questions %}
-        <div class="modal__item">
-          <li class="modal__question">{{ question.question }}</li>
-          <li class="modal__answer">{{ question.answer | markdown | safe }}</li>
-        </div>
+        <li class="modal__item modal__item--hidden">
+          <div class="modal__question modal__question--hidden">
+            {{ question.question }}
+          </div>
+          <div class="modal__answer modal__answer--hidden">
+            {{ question.answer | markdown | safe }}
+          </div>
+        </li>
         {% endfor %}
       </ul>
     </div>
