--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -147,8 +147,19 @@
   margin-top: $spacing-60
   margin-bottom: $spacing-40
   text-align: center
+  cursor: pointer
   +media(mobile)
     font-size: $font-size-20
+
+.modal__question--visible::after
+  content: '⊖'
+  margin-left: 0.2rem
+  font-size: $font-size-50
+
+.modal__question--hidden::after
+  content: '⊕'
+  margin-left: 0.2rem
+  font-size: $font-size-50
 
 .modal__answer
   font-size: $font-size-20
