Fix contact section padding

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -6,7 +6,8 @@
 
 .contact
   min-height: 100vh
-  padding: 17vw 0
+  padding-top: 20vw
+  padding-bottom: 10vw
   +font-primary
   display: flex
   align-items: center
