Setup form submission confirmation

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -5,6 +5,7 @@
 @import ../../global/sass-mixins/breakpoints
 
 .contact
+  position: relative
   min-height: 100vh
   padding-top: 20vw
   padding-bottom: 10vw
@@ -140,6 +141,10 @@ textarea.form__field__control
   background-color: $contact-button-hover-background-color
   color: $contact-button-hover-font-color
   cursor: pointer
+
+.form__button--success
+  background-color: $contact-button-hover-background-color
+  color: $contact-button-hover-font-color
 
 .contact__form--reveal
   display: flex
