--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -132,6 +132,8 @@ $contact-input-color: $color-neutral-20
 $contact-border-color: $color-neutral-20
 $contact-button-hover-background-color: $color-neutral-20
 $contact-button-hover-font-color: $color-neutral-100
+$success-background-color: $color-neutral-80
+$success-font-color: $color-neutral-20
 
 // Workflow colors
 $workflow-title-color: $color-neutral-20
