Style textarea text

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -123,8 +123,9 @@ textarea.form__field__control
   height: 3rem
 
 textarea.form__field__control
-    height: 8rem
-    background-color: transparent
+  height: 8rem
+  background-color: transparent
+  +font-secondary
 
 .form__field__label
   color: $contact-label-color
