--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -95,6 +95,10 @@
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
+  +media(tablet-landscape)
+    width: 90vw
+  +media(mobile)
+    padding: 1rem
 
 .modal__x
   position: absolute
@@ -103,6 +107,7 @@
   cursor: pointer
   top: 0.5rem
   right: 1rem
+  z-index: 2
 
 .modal__header
   color: $modal-header-color
@@ -122,6 +127,8 @@
   +font-weight-regular
   margin-bottom: $spacing-40
   text-align: center
+  +media(mobile)
+    font-size: $font-size-20
 
 .modal__info p
   margin-bottom: $spacing-30
@@ -150,16 +157,22 @@
   cursor: pointer
   +media(mobile)
     font-size: $font-size-20
+    margin-bottom: $spacing-30
+    line-height: $line-height-10
 
 .modal__question--visible::after
   content: '⊖'
   margin-left: 0.2rem
   font-size: $font-size-50
+  +media(mobile)
+    font-size: $font-size-30
 
 .modal__question--hidden::after
   content: '⊕'
   margin-left: 0.2rem
   font-size: $font-size-50
+  +media(mobile)
+    font-size: $font-size-30
 
 .modal__answer
   font-size: $font-size-20
@@ -170,6 +183,10 @@
   line-height: $line-height-10
   max-height: 20rem
   transition: visibility 0.2s, opacity 0.2s, max-height 0.2s
+  +media(mobile)
+    font-size: $font-size-20
+    margin-bottom: $spacing-30
+    max-height: 50rem
 
 .modal__answer--hidden
   visibility: hidden
