Improve contact section spacing on mobile

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -48,6 +48,8 @@
   +media(tablet-portrait)
     width: 100%
     align-items: center
+    height: 40vh
+    justify-content: space-between
 
 .contact__topics
   display: flex
@@ -58,6 +60,7 @@
   font-size: $font-size-40
   +media(mobile)
     font-size: $font-size-30
+    justify-content: space-between
 
 .contact__topic
   color: $contact-topic-color
@@ -82,9 +85,9 @@
   margin: 0 $spacing-60
   +media(tablet-portrait)
     height: auto
+    margin: 3rem auto
   +media(mobile)
     width: 85vw
-    margin: 0 auto
 
 .contact__form
   height: 100%
