Change nav background color and adjust positioning

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -132,6 +132,7 @@
   list-style: none
   padding: $spacing-40 0
   z-index: -1
+  margin-top: 0.3rem
   transform: translateY(-100%)
   opacity: 0
   transition-property: transform, opacity
