Close nav content on click away

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -132,14 +132,14 @@
   list-style: none
   padding: $spacing-40 0
   z-index: -1
-  margin-top: 0.3rem
-  transform: translateY(-100%)
+  margin-top: 0.4rem
+  transform: translateX(100%)
   opacity: 0
   transition-property: transform, opacity
   transition-duration: 0.3s
 
 .display-nav
-  transform: translateY(0)
+  transform: translateX(0)
   opacity: 1
 
 .nav__link--mobile
