--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -121,14 +121,14 @@
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: flex-start
+  justify-content: center
   position: absolute
-  left: 0
+  right: 0
   top: 6vh
   background: $nav-background-color--mobile
   width: 100vw
+  height: 94vh
   list-style: none
-  padding: $spacing-40 0
   z-index: -1
   margin-top: 0.4rem
   transform: translateX(100%)
@@ -141,8 +141,8 @@
   opacity: 1
 
 .nav__link--mobile
-  margin: $spacing-40
   color: $nav-font-color--mobile
+  height: 20%
 
 .nav__link--mobile:hover
   color: $nav-font-color--mobile
