--- a/components/nav/nav.html
+++ b/components/nav/nav.html
@@ -51,11 +51,11 @@
     </a>
     {%- endfor -%}
   </ul>
-  <div class="nav__menu">
+  <button class="nav__menu">
     <div class="nav__bar nav__bar--1"></div>
     <div class="nav__bar nav__bar--2"></div>
     <div class="nav__bar nav__bar--3"></div>
-  </div>
+  </button>
   <ul class="nav__content--mobile">
     {% for link in component.links %}
     <a
