Remove gap from bottom of modal

--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -182,6 +182,7 @@
   color: $modal-question-color
   line-height: $line-height-10
   max-height: 20rem
+  overflow: hidden
   transition: visibility 0.2s, opacity 0.2s, max-height 0.2s
   +media(mobile)
     font-size: $font-size-20
