--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -63,7 +63,7 @@
   top: 0
   left: 0
   z-index: 1
-  width: 100%
+  width: 100vw
   background: rgba(0, 0, 0, 0.25)
   display: flex
   align-items: center
@@ -86,8 +86,8 @@
   transform: translateY(-50%)
 
 .modal__content
-  max-width: 90vw
-  max-height: 90vh
+  width: 95%
+  height: 95%
   background: $modal-background-color
   padding: $spacing-50 $spacing-70
   overflow-y: scroll
@@ -106,8 +106,10 @@
   color: $modal-x-color
   cursor: pointer
   top: 0.5rem
-  right: 1rem
+  right: 3rem
   z-index: 4
+  +media(mobile)
+    right: 1rem
 
 .modal__header
   color: $modal-header-color
