--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -156,8 +156,11 @@ $why-us-header-color: $color-neutral-20
 $why-us-tagline-color: $color-neutral-40
 $why-us-button-color: $color-neutral-20
 $why-us-button-color--dark: $color-neutral-100
-$modal-background-color: $color-neutral-80
+$modal-background-color: $color-neutral-100
+$modal-border-color: $color-primary-120
 $modal-header-color: $color-neutral-20
 $modal-x-color: $color-neutral-20
 $modal-question-color: $color-neutral-20
 $modal-link-color: $color-neutral-40
+$modal-title-start-color: $color-primary-110
+$modal-title-end-color: $color-primary-100
