Set default font

--- a/global/sass-global-sources/base.sass
+++ b/global/sass-global-sources/base.sass
@@ -1,4 +1,5 @@
 @import ../sass-config/colors
+@import ../sass-mixins/typography
 
 *
   box-sizing: border-box
@@ -8,6 +9,7 @@ html
 
 body
   background: $color-neutral-100
+  +font-primary
 
 .body--hidden
   overflow: hidden
