--- a/global/sass-mixins/_typography.sass
+++ b/global/sass-mixins/_typography.sass
@@ -1,9 +1,11 @@
 // Font Families
 =font-primary
   font-family: 'Open Sans', Verdana, Geneva, Tahoma
+  font-display: auto
 
 =font-secondary
   font-family: 'Roboto', Arial, Helvetica, sans-serif
+  font-display: auto
 
 // Font Weights
 =font-weight-light
