--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -79,7 +79,7 @@
 
 .nav__link--active
   font-size: 1.5rem
-  font-weight: 600
+  +font-weight-bold
 
   &:after
     transform: translateY(-.6rem) rotate(45deg)
